[project]
name = "py-vetlog-calendar"
version = "1.0.4"
description = "Vetlog appointments organizer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }
authors = [{ name = "Jose Morales", email = "contact@josdem.io" }]
dependencies = [
  "google-auth-oauthlib>=0.4.0",
  "google-auth-httplib2>=0.0.3",
  "google-api-python-client>=1.7.9",
  "pydantic-settings>=2.12.0",
  "sqlmodel>=0.0.27",
  "mysql-connector-python>=9.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.5",
  "pytest-cov>=5.0.0",
]

[project.scripts]
version = "vetlog_calendar.main:version_check"
events = "vetlog_calendar.main:list_events"
paths = "vetlog_calendar.main:print_paths"
users = "vetlog_calendar.main:list_users"
pets = "vetlog_calendar.main:list_pets"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]