[project]
name = "py-vetlog-calendar"
version = "1.3.2"
description = "Vetlog appointments organizer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }
authors = [{ name = "Jose Morales", email = "contact@josdem.io" }]
dependencies = [
  "google-auth-oauthlib>=1.3.1",
  "google-auth-httplib2>=0.3.1",
  "google-api-python-client>=2.194.0",
  "pydantic-settings>=2.14.0",
  "sqlmodel>=0.0.38",
  "mysql-connector-python>=9.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.5",
  "pytest-cov>=5.0.0",
]

[project.scripts]
version = "vetlog_calendar.main:version_check"
paths = "vetlog_calendar.main:print_paths"
users = "vetlog_calendar.main:list_users"
pets = "vetlog_calendar.main:list_pets"
vaccinations = "vetlog_calendar.main:vaccinations_cli"
dewormings = "vetlog_calendar.main:list_deworming"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]